--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
          "mutsuz_panda",
          "Richard_Ramirezzblog"
       ],   
-   "repository": "https://github.com/Gecekus/tagv6",
+   "repository": "https://github.com/amahocam/Mentionall-Azerbercan-",
    "env": {
       "TOKEN": {
          "description": "Botunuzun tokenini bura yazın",
