--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
       "name": "Tagger bot",
-      "description": "Gece kuşu tagger",
+      "description": "Oksigen tagger",
       "keywords": [
          "telegram",
          "tagger",
